[project]
name = "lsproxy-sdk"
version = "0.1.0"
description = "SDK for interacting with lsproxy container"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/lsproxy-sdk"
Repository = "https://github.com/yourusername/lsproxy-sdk.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]
